<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MouseDroid</string>
    <string name="portNo">Enter port number</string>
    <string name="ip_addr">Enter ip address</string>
    <string name="packetText">Enter text to send</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="button_resume">Resume</string>
    <string name="button_pause">Pause</string>
    <string name="button_stop">Stop</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>

</resources>
